--- a/문제들/문제 38~40.md
+++ b/문제들/문제 38~40.md
@@ -12,12 +12,6 @@
 따라서 4 8 6 2 5 1 3 7의 inversion sequence는 5 3 4 0 2 1 1 0 이 된다.
 n과 1부터 n까지의 수를 사용하여 이루어진 수열의 inversion sequence가 주어졌을 때, 원래
 의 수열을 출력하는 프로그램을 작성하세요.
-▣ 입력설명 첫 번째 줄에 자연수 N(3<=N<100)이 주어지고, 두 번째 줄에는 inversion sequence가 숫자 사이에 한 칸의 공백을 두고 주어진다.
-▣ 출력설명 오름차순으로 정렬된 수열을 출력합니다.
-▣ 입력예제 1
-8 5 3 4 0 2 1 1 0
-▣ 출력예제 1
-4 8 6 2 5 1 3 7
 
 ```c++
 #include <iostream>
@@ -85,9 +79,7 @@ int main() {
 ```
 
 
-​    
-​    
-​    
+
 ```c++
 <1부터 처리하는 방법>
 #include<bits/stdc++.h>
@@ -120,12 +112,6 @@ int main(){
 ### 두 배열 합치기 (병합 정렬)
 
 오름차순으로 정렬이 된 두 배열이 주어지면 두 배열을 오름차순으로 합쳐 출력하는 프로그램 을 작성하세요.
-▣ 입력설명 첫 번째 줄에 첫 번째 배열의 크기 N(1<=N<=100)이 주어집니다. 두 번째 줄에 N개의 배열 원소가 오름차순으로 주어집니다. 세 번째 줄에 두 번째 배열의 크기 M(1<=M<=100)이 주어집니다. 네 번째 줄에 M개의 배열 원소가 오름차순으로 주어집니다. 각 배열의 원소는 int형 변수의 크기를 넘지 않습니다.
-▣ 출력설명 오름차순으로 정렬된 배열을 출력합니다.
-▣ 입력예제 1
-3 1 3 5 5 2 3 6 7 9
-▣ 출력예제 1
-1 2 3 3 5 6 7 9
 
 ```c++
 #include <iostream>
@@ -198,17 +184,11 @@ int main(){
 
 # 40
 
-### 교집합 (투포인트 알고리즘) : MS 인터뷰
+### 교집합
 
 `시간제한 1초`
 
 두 집합 A, B가 주어지면 두 집합의 교집합을 출력하는 프로그램을 작성하세요.
-▣ 입력설명 첫 번째 줄에 집합 A의 크기 N(1<=N<=30,000)이 주어집니다. 두 번째 줄에 N개의 원소가 주어집니다. 원소가 중복되어 주어지지 않습니다. 세 번째 줄에 집합 B의 크기 M(1<=M<=30,000)이 주어집니다. 네 번째 줄에 M개의 원소가 주어집니다. 원소가 중복되어 주어지지 않습니다. 각 집합의 원소는 int형 변수의 크기를 넘지 않습니다.
-▣ 출력설명 두 집합의 교집합을 오름차순 정렬하여 출력합니다.
-▣ 입력예제 1
-5 2 7 10 5 3 5 3 10 5 17 12
-▣ 출력예제 1
-3 5 10
 
 `80점`
 
