--- a/문제들/문제 41~45(단순 수리, 이분 검색, 조세퍼스).md
+++ b/문제들/문제 41~45(단순 수리, 이분 검색, 조세퍼스).md
@@ -5,18 +5,6 @@
 ### 연속된 자연수의 합(단순수리)
 
 입력으로 양의 정수 N이 입력되면 2개 이상의 연속된 자연수의 합으로 정수 N을 표현하는 방 법의 가짓수를 출력하는 프로그램을 작성하세요. 만약 N=15이면 7+8=15 4+5+6=15 1+2+3+4+5=15 와 같이 총 3가지의 경우가 존재한다.
-▣ 입력설명 첫 번째 줄에 양의 정수 N(7<=N<1000)이 주어진다.
-▣ 출력설명 첫줄부터 각각의 경우의 수를 출력한다. 맨 마지막 줄에 총 개수를 출력한다.
-▣ 입력예제 1
-15
-▣ 출력예제 1
-7 + 8 = 15 
-
-4 + 5 + 6 = 15 
-
-1 + 2 + 3 + 4 + 5 = 15 
-
-3
 
 ```c++
 #include<vector>
@@ -54,44 +42,6 @@ int main() {
 ```
 
 **강의 속 답**
-
-수학적 머리를 써야한다 이런 문제는 취업 때 인터뷰 용으로 나오거나 코테로 나올 수 있다.
-
-15라고 치고 연속된 수 연속 두개 1,2라고 하면
-
-15 - (1+2) = 12 다.
-
-12 % 2 == 0 이므로 12/2 = 6
-
-1    2
-
-6    6
-
-—  —
-
-7    8
-
-그래서 7 + 8 = 15
-
-1 , 2, 3 이면
-
-15 - (1+2+3) = 9
-
-9 % 3(연속된 숫자 수) == 0
-
-9/3 = 3
-
-1    2    3
-
-3    3    3
-
-—  —  —
-
-4     5    6
-
-→ 4 + 5 + 6 = 15
-
-되는 원리래 . 대체 뭔 베이스 원리인지는 모르겠음
 
 ```c++
 #include<vector>
@@ -133,14 +83,6 @@ int main() {
 **== 결정 알고리즘**
 
 임의의 N개의 숫자가 입력으로 주어집니다. N개의 수를 오름차순으로 정렬한 다음 N개의 수 중 한 개의 수인 M이 주어지면 이분검색으로 M이 정렬된 상태에서 몇 번째에 있는지 구하는 프로그램을 작성하세요.
-▣ 입력설명 첫 줄에 한 줄에 자연수 N(3<=N<=1,000,000)과 M이 주어집니다. 두 번째 줄에 N개의 수가 공백을 사이에 두고 주어집니다.
-▣ 출력설명 첫 줄에 정렬 후 M의 값의 위치 번호를 출력한다.
-▣ 입력예제 1
-8 32
-
-23 87 65 12 57 32 99 81
-▣ 출력예제 1
-3
 
 ```c++
 #include<vector>
@@ -214,15 +156,9 @@ int main() {
 
 # 43
 
-### 뮤직비디오 (이분검색 응용)
+### 뮤직비디오 
 
 지니레코드에서는 불세출의 가수 조영필의 라이브 동영상을 DVD로 만들어 판매하려 한다. DVD에는 총 N개의 곡이 들어가는데, DVD에 녹화할 때에는 라이브에서의 순서가 그대로 유지 되어야 한다. 순서가 바뀌는 것을 우리의 가수 조영필씨가 매우 싫어한다. 즉, 1번 노래와 5번 노래를 같은 DVD에 녹화하기 위해서는 1번과 5번 사이의 모든 노래도 같은 DVD에 녹화해야 한다. 지니레코드 입장에서는 이 DVD가 팔릴 것인지 확신할 수 없기 때문에 이 사업에 낭비되는 DVD를 가급적 줄이려고 한다. 고민 끝에 지니레코드는 M개의 DVD에 모든 동영상을 녹화하기 로 하였다. 이 때 DVD의 크기(녹화 가능한 길이)를 최소로 하려고 한다. 그리고 M개의 DVD는 모두 같은 크기여야 제조원가가 적게 들기 때문에 꼭 같은 크기로 해야 한다.
-▣ 입력설명 첫째 줄에 자연수 N(1≤N≤1,000), M(1≤M≤N)이 주어진다. 다음 줄에는 조영필이 라이브에서 부른 순서대로 부른 곡의 길이가 분 단위로(자연수) 주어진다. 부른 곡의 길이는 10,000분을 넘지 않는다고 가정하자.
-▣ 출력설명 첫 번째 줄부터 DVD의 최소 용량 크기를 출력하세요.
-▣ 입력예제 1
-9 3 1 2 3 4 5 6 7 8 9
-▣ 출력예제 1
-17
 
 - 실패
 
@@ -396,30 +332,9 @@ int main(){
 
 # 44
 
-### 마구간 정하기(이분검색 응용)
+### 마구간 정하기
 
 N개의 마구간이 1차원 수직선상에 있습니다. 각 마구간은 x1, x2, x3, ......, xN의 좌표를 가 지며, 마구간간에 좌표가 중복되는 일은 없습니다. 현수는 C마리의 말을 가지고 있는데, 이 말들은 서로 가까이 있는 것을 좋아하지 않습니다. 각 마구간에는 한 마리의 말만 넣을 수 있고, 가장 가까운 두 말의 거리가 최대가 되게 말을 마구간에 배치하고 싶습니다. C마리의 말을 N개의 마구간에 배치했을 때 가장 가까운 두 말의 거리가 최대가 되는 그 최대 값을 출력하는 프로그램을 작성하세요.
-
-▣ 입력설명 
-
-첫 줄에 자연수 N(3<=N<=200,000)과 C(2<=C<=N)이 공백을 사이에 두고 주어집니다. 둘째 줄부터 N개의 줄에 걸쳐 마구간의 좌표 xi(0<=xi<=1,000,000,000)가 한 줄에 하나씩 주어집니다.
-▣ 출력설명 
-
-첫 줄에 가장 가까운 두 말의 최대 거리를 출력하세요.
-▣ 입력예제 1
-5 3
-
-1 
-
-2 
-
-8 
-
-4 
-
-9
-▣ 출력예제 1
-3
 
 - 실패
 
@@ -552,22 +467,6 @@ N개의 마구간이 1차원 수직선상에 있습니다. 각 마구간은 x1, 
 ### 공주 구하기
 
 정보 왕국의 이웃 나라 외동딸 공주가 숲속의 괴물에게 잡혀갔습니다. 정보 왕국에는 왕자가 N명이 있는데 서로 공주를 구하러 가겠다고 합니다. 정보왕국의 왕은 다음과 같은 방법으로 공주를 구하러 갈 왕자를 결정하기로 했습니다. 왕은 왕자들을 나이 순으로 1번부터 N번까지 차례로 번호를 매긴다. 그리고 1번 왕자부터 N 번 왕자까지 순서대로 시계 방향으로 돌아가며 동그랗게 앉게 한다. 그리고 1번 왕자부터 시 계방향으로 돌아가며 1부터 시작하여 번호를 외치게 한다. 한 왕자가 K(특정숫자)를 외치면 그 왕자는 공주를 구하러 가는데서 제외되고 원 밖으로 나오게 된다. 그리고 다음 왕자부터 다시 1부터 시작하여 번호를 외친다. 이렇게 해서 마지막까지 남은 왕자가 공주를 구하러 갈 수 있다.
-1 8 2
-7 3
-6
-5
-4
-예를 들어 총 8명의 왕자가 있고, 3을 외친 왕자가 제외된다고 하자. 처음에는 3번 왕자가 3 을 외쳐 제외된다. 이어 6, 1, 5, 2, 8, 4번 왕자가 차례대로 제외되고 마지막까지 남게 된 7 번 왕자에게 공주를 구하러갑니다. N과 K가 주어질 때 공주를 구하러 갈 왕자의 번호를 출력하는 프로그램을 작성하시오.
-▣ 입력설명 
-
-첫 줄에 자연수 N(5<=N<=1,000)과 K(2<=K<=9)가 주어진다.
-▣ 출력설명 
-
-첫 줄에 마지막 남은 왕자의 번호를 출력합니다.
-▣ 입력예제 1
-8 3
-▣ 출력예제 1
-7
 
 ```c++
 #include<vector>
