--- a/문제들/문제 85~90.md
+++ b/문제들/문제 85~90.md
@@ -119,6 +119,117 @@ int main() {
 }
 ```
 
+
+
+조합을 이용해야 한다!!
+
+```c++
+//타임리밋으로 20점
+#include <iostream>
+#include <string>
+#include <vector>
+#include <algorithm>
+#include <queue>
+
+using namespace std;
+
+int N, M;
+vector<pair<int, int> > pizza;
+vector<pair<int, int> > people;
+int ch[13];
+int res = 987654321;
+
+int cal(int x1, int y1, int x2, int y2) {
+	return abs(x1 - x2) + abs(y1 - y2);
+}
+
+void dfs(int index, int cnt) {
+	if (cnt == M) {
+		int min = 0;
+		for (int i = 0; i < people.size(); i++) {
+			int dis = 987654321;
+			for (int j = 0; j <M; j++) {
+				int x = cal(people[i].first, people[i].second, pizza[ch[j]].first, pizza[ch[j]].second);
+				if(dis > x) dis = x;
+			}
+			min += dis;
+		}
+		if (min < res) res = min;
+		return;
+	}
+	for (int i = index; i < pizza.size(); i++) {
+		ch[cnt] = i;
+		dfs(index + 1, cnt+1);
+	}
+}
+
+int main() {
+	scanf("%d %d", &N, &M);
+	for (int i = 1; i <=N; i++) {
+		for (int j = 1; j <= N; j++) {
+			int x;
+			scanf("%d", &x);
+			if (x == 1) people.push_back({ i,j });
+			else if (x == 2) pizza.push_back({ i,j });
+		}
+	}
+	dfs(0, 0);
+	printf("%d\\n", res);
+	
+	return 0;
+}
+
+//통과 코드
+#include<stdio.h>
+#include<vector>
+#include<algorithm>
+using namespace std;
+vector<pair<int, int> > pz;
+vector<pair<int, int> > hs;
+int ch[20], m, res = 2147000000, dis, sum = 0;
+
+void DFS(int L, int cnt) {
+	if (L > pz.size()) return;
+	if (cnt == m) {
+		sum = 0;
+		for (int i = 0; i < hs.size(); i++) {
+			int x1 = hs[i].first;
+			int y1 = hs[i].second;
+			dis = 2147000000;
+			for (int j = 0; j < m; j++) {
+				int x2 = pz[ch[j]].first;
+				int y2 = pz[ch[j]].second;
+				dis = min(dis, abs(x1 - x2) + abs(y1 - y2));
+			}
+			sum = sum + dis;
+		}
+		if (sum < res) res = sum;
+	}
+	else {
+		ch[cnt] = L;
+		DFS(L + 1, cnt + 1);
+		DFS(L + 1, cnt);
+	}
+}
+
+int main() {
+	int n, i, j, a;
+	scanf("%d %d", &n, &m);
+	for (i = 1; i <= n; i++) {
+		for (j = 1; j <= n; j++) {
+			scanf("%d", &a);
+			if (a == 1) hs.push_back(make_pair(i, j));
+			else if (a == 2) pz.push_back(make_pair(i, j));
+		}
+	}
+	DFS(0, 0);
+	printf("%d\\n", res);
+	return 0;
+}
+```
+
+
+
 # 87
 
 ### 섬나라 아일랜드(BFS 활용)
@@ -308,6 +419,139 @@ int main() {
 	return 0;
 }
 ```
+
+
+
+M과 N 범위 잘못파악했음!!! 그래서 다시 짰는데
+
+`60점` 나머지는 시간 초과! 왜일까??
+
+```c++
+#include <iostream>
+#include <string>
+#include <vector>
+#include <algorithm>
+#include <queue>
+
+using namespace std;
+
+int N, M;
+int arr[1001][1001];
+bool check[1001][1001];
+queue<pair<int, int> > q;
+int dx[] = { -1,1,0,0 };
+int dy[] = { 0,0,-1,1 };
+
+int main() {
+	scanf("%d %d", &M, &N);
+	for (int i = 1; i <= N; i++) {
+		for (int j = 1; j <= M; j++) {
+			scanf("%d", &arr[i][j]);
+			if (arr[i][j] == 1) q.push({ i,j });
+		}
+	}
+	int cnt = -1;
+	while (!q.empty()) {
+		int size = q.size();
+		cnt++;
+		while (size--) {
+			int x = q.front().first;
+			int y = q.front().second;
+			check[x][y] = true;
+			q.pop();
+			for (int i = 0; i < 4; i++) {
+				int nx = x + dx[i];
+				int ny = y + dy[i];
+				if (nx < 1 || ny < 1 || nx > N || ny > M || check[nx][ny] || arr[nx][ny] == -1 || arr[nx][ny] == 1) continue;
+				q.push({ nx,ny });
+				check[nx][ny] = true;
+			}
+		}
+	}
+	for (int i = 1; i <= N; i++) {
+		for (int j = 1; j <= M; j++) {
+			if (arr[i][j] == 0 && !check[i][j]) {
+				cnt = -1;
+				break;
+			}
+		}
+		if (cnt == -1)break;
+	}
+
+	printf("%d\\n", cnt);
+	return 0;
+}
+```
+
+강의와 같은 답을 해도 마지막 두개는 타임 리밋
+
+```c++
+#include <iostream>
+#include <string>
+#include <vector>
+#include <algorithm>
+#include <queue>
+
+using namespace std;
+
+int N, M;
+int arr[1001][1001];
+int dis[1001][1001];
+queue<pair<int, int> > q;
+int dx[] = { -1,1,0,0 };
+int dy[] = { 0,0,-1,1 };
+
+int main() {
+	scanf("%d %d", &M, &N);
+	for (int i = 1; i <= N; i++) {
+		for (int j = 1; j <= M; j++) {
+			scanf("%d", &arr[i][j]);
+			if (arr[i][j] == 1) {
+				q.push({ i,j });
+			}
+		}
+	}
+	while (!q.empty()) {
+		int x = q.front().first;
+		int y = q.front().second;
+		q.pop();
+		for (int i = 0; i < 4; i++) {
+			int nx = x + dx[i];
+			int ny = y + dy[i];
+			if (nx < 1 || ny < 1 || nx > N || ny > M || arr[nx][ny] == -1 || arr[nx][ny] == 1) continue;
+			q.push({ nx,ny });
+			arr[nx][ny] = 1;
+			dis[nx][ny] = dis[x][y] + 1;
+		}
+	}
+	bool check = false;
+	int res = -987654321;
+	for (int i = 1; i <= N; i++) {
+		for (int j = 1; j <= M; j++) {
+			if (arr[i][j] == 0) {
+				check = true;
+				break;
+			}
+		}
+	}
+	if (check) printf("-1\\n");
+	else {
+		for (int i = 1; i <= N; i++) {
+			for (int j = 1; j <= M; j++) {
+				if (res < dis[i][j]) res = dis[i][j];
+			}
+		}
+		printf("%d\\n", res);
+	}
+	return 0;
+}
+```
+
+강의코드로 돌려도 타임리밋 나는거 보면 컴퓨터 차이인듯하다
+
+
+
+
 
 # 90
 
