--- a/문제들/프로그래머 - 해시.md
+++ b/문제들/프로그래머 - 해시.md
@@ -139,8 +139,228 @@ bool solution(vector<string> phone_book) {
 
 [프로그래머스](https://programmers.co.kr/learn/courses/30/lessons/42578)
 
+걍 더하고 곱하면 될줄... 조합찾는거니깐
+
+```c++
+#include <string>
+#include <vector>
+#include <unordered_map>
+
+using namespace std;
+
+int solution(vector<vector<string>> clothes) {
+    int answer = 0;
+    unordered_map<string, int> m;
+    answer += clothes.size();
+    for(int i=0; i<clothes.size(); i++){
+        m[clothes[i][1]]++;
+    }
+    int val = 1;
+    for(auto it : m){
+        val *= it.second;
+    }
+    if(m.size()>1) answer += val;
+    return answer;
+}
+```
+
+-> 8/28 맞음..
+
+착용안한 것도 경우의 수가 들어가니깐 무조건 착용하는게 아님.. 그래서 dfs를 사용했는데 답이 나오지 않는 상태!
+
+```c++
+#include <string>
+#include <vector>
+#include <unordered_map>
+
+using namespace std;
+
+vector<string> a;
+bool check[31];
+int res;
+unordered_map<string, int> m;
+
+void dfs(int index){
+    if(index == a.size() || m[a[index]] ==0){
+        res++;
+        return;
+    }
+    int size = m[a[index]];
+    for(int i=0; i<size; i++){
+        m[a[index]]--;
+        dfs(index+1);
+    }
+}
+
+int solution(vector<vector<string>> clothes) {
+    int answer = 0;
+    
+    answer += clothes.size();
+    for(int i=0; i<clothes.size(); i++){
+        m[clothes[i][1]]++;
+    }
+    for(auto it : m){
+        a.push_back(it.first);
+    }
+    dfs(0);
+    return res;
+}
+```
+
+
+
+얼척없어.. 생각하다가 dfs도 아닌 거 같아서 인터넷 정답 코드 보니깐 그냥 수학 문제였다
+
+```c++
+#include <string>
+#include <vector>
+#include <unordered_map>
+
+using namespace std;
+
+int solution(vector<vector<string>> clothes) {
+    int answer = 1;
+    unordered_map<string, int> m;
+    for(int i=0; i<clothes.size(); i++){
+        m[clothes[i][1]]++;
+    }
+    for(auto x:m){
+//옷 가지수 + 안 입을 경우
+        answer *= (x.second + 1);
+    }
+//모두 다 입는 경우는 존재하지 않으니 뺀다
+    return answer-1;
+}
+```
+
 
 
 ## Level 3
 
 ### 베스트앨범
+
+[프로그래머스](https://programmers.co.kr/learn/courses/30/lessons/42579)
+
+```c++
+#include <string>
+#include <vector>
+#include <map>
+#include <algorithm>
+
+using namespace std;
+
+struct song {
+	int num, play;
+	song(int n, int p) {
+		num = n;
+		play = p;
+	}
+
+	bool operator<(song &b) {
+		if (play == b.play) {
+			return num < b.num;
+		}
+		return play > b.play;
+	}
+};
+
+vector<int> solution(vector<string> genres, vector<int> plays) {
+	vector<int> answer;
+	map<string, int> m;
+	for (int i = 0, j = 0; i < genres.size(), j < plays.size(); i++, j++) {
+		m[genres[i]] += plays[j];
+	}
+	vector<song> a[31];
+	int k = 0;
+	for (auto x : m) {
+		for (int i = 0; i < plays.size(); i++) {
+			if (x.first == genres[i]) {
+				a[k].push_back(song(i, plays[i]));
+			}
+		}
+		k++;
+	}
+	for (int i = k-1; i >= 0; i--) {
+		int cnt = 0;
+		sort(a[i].begin(), a[i].end());
+		for (int j = 0; j < a[i].size(); j++) {
+			if (cnt == 2) break;
+			answer.push_back(a[i][j].num);
+			cnt++;
+		}
+	}
+
+	return answer;
+}
+```
+
+비교하는 함수랑.. 한창 씨름하다가 구현다했는데
+
+3/15 맞았다..ㅠㅠ
+
+하 map이 내부적으로 정렬되는걸 믿고있었는데 다른분 코드보다가 올린 테스트케이스 보고 깨달았음 key로 오름차순 정렬됨 그래서 map을 vector로 옮겨서 sort 해줬더니 다 맞았다
+
+```c++
+#include <string>
+#include <vector>
+#include <map>
+#include <algorithm>
+
+using namespace std;
+
+struct song {
+	int num, play;
+	song(int n, int p) {
+		num = n;
+		play = p;
+	}
+
+	bool operator<(song &b) {
+		if (play == b.play) {
+			return num < b.num;
+		}
+		return play > b.play;
+	}
+};
+
+
+bool comp(pair<string,int> a, pair<string,int> b) {
+	return a.second > b.second;
+}
+
+vector<int> solution(vector<string> genres, vector<int> plays) {
+	vector<int> answer;
+	map<string, int> m;
+	vector<pair<string, int> > s;
+	for (int i = 0, j = 0; i < genres.size(), j < plays.size(); i++, j++) {
+		m[genres[i]] += plays[j];
+	}
+	for (auto x : m) {
+		s.push_back({ x.first, x.second });
+	}
+	sort(s.begin(), s.end(), comp);
+	vector<song> a[31];
+	int k = 0;
+	for (int x = 0; x < s.size(); x++) {
+		for (int i = 0; i < plays.size(); i++) {
+			if (s[x].first == genres[i]) {
+				a[k].push_back(song(i, plays[i]));
+			}
+		}
+		k++;
+	}
+	for (int i = 0; i <k; i++) {
+		int cnt = 0;
+		sort(a[i].begin(), a[i].end());
+		for (int j = 0; j < a[i].size(); j++) {
+			if (cnt == 2) break;
+			answer.push_back(a[i][j].num);
+			cnt++;
+		}
+	}
+
+	return answer;
+}
+```
+
+데이터 값이 작아서 (최대 만) sort를 계속 해줘도 시간초과 안난다.
