--- a/문제들/삼성 역테 문제들.md
+++ b/문제들/삼성 역테 문제들.md
@@ -28,110 +28,115 @@
 
     예제 3번까지 되다말지를 않나 다시 고치니깐 2번부터 안되지 않나 풀다 지쳐서 GG
 
-        #include <string>
-        #include <vector>
-        #include <iostream>
-        #include <algorithm>
-        #include <queue>
-        
-        using namespace std;
-        
-        int N, M;
-        char board[11][11];
-        int dx[] = { -1,1,0,0 };
-        int dy[] = { 0, 0, -1, 1 }; //위,아래,왼,오
-        
-        struct ball {
-        	int rx, ry, cnt;
-        	int bx, by;
-        };
-        
-        int main() {
-        	ios_base::sync_with_stdio(false);
-        	cin >> N >> M;
-        	ball b;
-        	bool flag = false;
-        	for (int i = 0; i < N; i++) {
-        		for (int j = 0; j < M; j++) {
-        			cin >> board[i][j];
-        			if (board[i][j] == 'B') {
-        				b.bx = i;
-        				b.by = j;
-        				board[i][j] = '.';
-        			}
-        			else if (board[i][j] == 'R') {
-        				b.rx = i;
-        				b.ry = j;
-        				b.cnt = 0;
-        				board[i][j] = '.';
-        			}
-        		}
-        	}
-        	queue<ball> q;
-        	q.push(b);
-        	int result = -1;
-        	while (!q.empty()) {
-        		b = q.front();
-        		int rx = b.rx;
-        		int ry = b.ry;
-        		int rCnt = b.cnt;
-        		int bx = b.bx;
-        		int by = b.by;
-        		q.pop();
-        		if (board[rx][ry] == 'O') {
-        			result = rCnt;
-        			break;
-        		}
-        		for (int i = 0; i < 4; i++) {
-        			//방향대로 벽 만나기전까지 움직이기
-        			int nrx = rx, nry = ry, nbx = bx, nby = by;
-        			while (board[nrx+dx[i]][nry+dy[i]] != '#' && board[nrx + dx[i]][nry + dy[i]] != 'O') {
-        				nrx += dx[i];
-        				nry += dy[i];
-        			}
-        			while (board[nbx + dx[i]][nby + dy[i]] != '#' && board[nbx + dx[i]][nby + dy[i]] != 'O') {
-        				nbx += dx[i];
-        				nby += dy[i];
-        			}
-        			if (nrx == nbx && nry == nby) {
-        				if (rx < bx) {
-        					if (i == 2) nbx++;
-        					else if (i == 3) nrx--;
-        				}
-        				else if (rx > bx) {
-        					if (i == 2) nrx++;
-        					else if (i == 3) nbx--;
-        				}
-        				else if (ry < by) {
-        					if (i == 0) nby++;
-        					else if (i == 1) nry--;
-        				}
-        				else if (ry > by) {
-        					if (i == 0) nry++;
-        					else if (i == 1) nby--;
-        				}
-        			}
-        			if (board[nrx + dx[i]][nry + dy[i]] == 'O') {
-        				nrx += dx[i];
-        				nry += dy[i];
-        			}
-        			if (rx == nrx && ry == nry && bx == nbx && by == nby) continue;
-        			if (board[nbx+dx[i]][nby+dy[i]] == 'O') continue;
-        			ball temp;
-        			temp.rx = nrx;
-        			temp.ry = nry;
-        			temp.cnt = rCnt + 1;
-        			temp.bx = nbx;
-        			temp.by = nby;
-        			q.push(temp);
-        		}
-        	}
-        	
-        
-        	cout << result << "\n";
-        
-        	return 0;
-        }
+    ```c++
+    #include <string>
+    #include <vector>
+    #include <iostream>
+    #include <algorithm>
+    #include <queue>
+    
+    using namespace std;
+    
+    int N, M;
+    char board[11][11];
+    int dx[] = { -1,1,0,0 };
+    int dy[] = { 0, 0, -1, 1 }; //위,아래,왼,오
+    
+    struct ball {
+    	int rx, ry, cnt;
+    	int bx, by;
+    };
+    
+    int main() {
+    	ios_base::sync_with_stdio(false);
+    	cin >> N >> M;
+    	ball b;
+    	bool flag = false;
+    	for (int i = 0; i < N; i++) {
+    		for (int j = 0; j < M; j++) {
+    			cin >> board[i][j];
+    			if (board[i][j] == 'B') {
+    				b.bx = i;
+    				b.by = j;
+    				board[i][j] = '.';
+    			}
+    			else if (board[i][j] == 'R') {
+    				b.rx = i;
+    				b.ry = j;
+    				b.cnt = 0;
+    				board[i][j] = '.';
+    			}
+    		}
+    	}
+    	queue<ball> q;
+    	q.push(b);
+    	int result = -1;
+    	while (!q.empty()) {
+    		b = q.front();
+    		int rx = b.rx;
+    		int ry = b.ry;
+    		int rCnt = b.cnt;
+    		int bx = b.bx;
+    		int by = b.by;
+    		q.pop();
+    		if (board[rx][ry] == 'O') {
+    			result = rCnt;
+    			break;
+    		}
+    		for (int i = 0; i < 4; i++) {
+    			//방향대로 벽 만나기전까지 움직이기
+    			int nrx = rx, nry = ry, nbx = bx, nby = by;
+    			while (board[nrx+dx[i]][nry+dy[i]] != '#' && board[nrx + dx[i]][nry + dy[i]] != 'O') {
+    				nrx += dx[i];
+    				nry += dy[i];
+    			}
+    			while (board[nbx + dx[i]][nby + dy[i]] != '#' && board[nbx + dx[i]][nby + dy[i]] != 'O') {
+    				nbx += dx[i];
+    				nby += dy[i];
+    			}
+    			if (nrx == nbx && nry == nby) {
+    				if (rx < bx) {
+    					if (i == 2) nbx++;
+    					else if (i == 3) nrx--;
+    				}
+    				else if (rx > bx) {
+    					if (i == 2) nrx++;
+    					else if (i == 3) nbx--;
+    				}
+    				else if (ry < by) {
+    					if (i == 0) nby++;
+    					else if (i == 1) nry--;
+    				}
+    				else if (ry > by) {
+    					if (i == 0) nry++;
+    					else if (i == 1) nby--;
+    				}
+    			}
+    			if (board[nrx + dx[i]][nry + dy[i]] == 'O') {
+    				nrx += dx[i];
+    				nry += dy[i];
+    			}
+    			if (rx == nrx && ry == nry && bx == nbx && by == nby) continue;
+    			if (board[nbx+dx[i]][nby+dy[i]] == 'O') continue;
+    			ball temp;
+    			temp.rx = nrx;
+    			temp.ry = nry;
+    			temp.cnt = rCnt + 1;
+    			temp.bx = nbx;
+    			temp.by = nby;
+    			q.push(temp);
+    		}
+    	}
+    ```
+    
+    
+    ​    
+    ```c++
+    	cout << result << "\n";
+    
+    	return 0;
+    }
+    ```
 
 [13460번: 구슬 탈출 2](https://www.acmicpc.net/problem/13460)
 
@@ -140,114 +145,585 @@
     visited check 배열 안한게 패착이다 역시.. 체크해야하는거 아닌가 슬쩍 생각했는데 그거때문에 더 그런거군.. 그리고 이 사람은 nrx+dx[i]가 아니라 nrx일때 ≠ 'O' 이라 했다.. 이게 차이점인듯
     그니깐 다음이 구멍이여도 되는데 현재가 구멍이면 즉시 while문 끝나게
 
-        #include <string>
-        #include <vector>
-        #include <iostream>
-        #include <map>
-        #include <algorithm>
-        #include <sstream>
-        #include <queue>
-        #include <regex>
-        #include <deque>
-        #include <set>
-        #include <cstring>
-        
-        using namespace std;
-        
-        int N, M;
-        char board[10][10];
-        int dx[] = { -1, 1, 0, 0 };
-        int dy[] = { 0, 0, -1, 1 };
-        bool visited[10][10][10][10];
-        struct Balls{
-        	int redX;
-        	int redY;
-        	int blueX;
-        	int blueY;
-        };
-        
-        int bfs(int rx, int ry, int bx,int by) {
-        	int ans = 0;
-        	queue<Balls> q;
-        	q.push({ rx,ry , bx,by });
-        	visited[rx][ry][bx][by] = true;
-        	while (!q.empty()) {
-        		int size = q.size();
-        		while (size--) {
-        			Balls cur = q.front();
-        			q.pop();
-        			if (board[cur.redX][cur.redY] == 'O' && board[cur.redX][cur.redY] != board[cur.blueX][cur.blueY]) { return ans; }
-        			for (int i = 0; i < 4; i++) {
-        				int nrx = cur.redX;
-        				int nry = cur.redY;
-        				int nbx = cur.blueX;
-        				int nby = cur.blueY;
-        
-        				while (board[nrx + dx[i]][nry + dy[i]] != '#' && board[nrx][nry] != 'O' ) {
-        					nrx += dx[i];
-        					nry += dy[i];
-        				}
-        				while (board[nbx + dx[i]][nby + dy[i]] != '#' &&  board[nbx][nby] != 'O') {
-        					nbx += dx[i];
-        					nby += dy[i];
-        				}
-        				if (nrx == nbx && nry == nby) {
-        					if (board[nbx][nby] == 'O') continue;
-        					if (i == 0) {
-        						//위
-        						if (cur.redX < cur.blueX) { nbx++; }
-        						else { nrx++; }
-        					}
-        					else if (i == 1) {
-        						//아래
-        						if (cur.redX < cur.blueX) { nrx--; }
-        						else { nbx--; }
-        					}
-        					else if (i == 2) {
-        						//왼
-        						if (cur.redY < cur.blueY) { nby++; }
-        						else { nry++; }
-        					}
-        					else if (i == 3) {
-        						//오
-        						if (cur.redY < cur.blueY) { nry--; }
-        						else { nby--; }
-        					}
-        				}
-        				if (!visited[nrx][nry][nbx][nby]) {
-        					q.push({ nrx, nry, nbx, nby });
-        					visited[nrx][nry][nbx][nby] = true;
-        				}
-        			}
-        		}
-        		if (ans == 10) return -1;
-        		ans++;
-        	}
-        
-        	return -1;
-        }
-        
-        int main() {
-        	cin >> N >> M;
-        	int rx, ry, bx, by;
-        	for (int i = 0; i < N; i++) {
-        		for (int j = 0; j < M; j++) {
-        			cin >> board[i][j];
-        			if (board[i][j] == 'R') { rx = i; ry = j; board[i][j] = '.';}
-        			else if (board[i][j] == 'B') { 
-        				bx = i; by = j; 
-        				board[i][j] = '.';
-        			}
-        		}
-        	}
-        
-        	cout << bfs(rx, ry, bx, by)<<"\n";
-        	
-        	return 0;
-        }
+    ```c++
+    #include <string>
+    #include <vector>
+    #include <iostream>
+    #include <map>
+    #include <algorithm>
+    #include <sstream>
+    #include <queue>
+    #include <regex>
+    #include <deque>
+    #include <set>
+    #include <cstring>
+    
+    using namespace std;
+    
+    int N, M;
+    char board[10][10];
+    int dx[] = { -1, 1, 0, 0 };
+    int dy[] = { 0, 0, -1, 1 };
+    bool visited[10][10][10][10];
+    struct Balls{
+    	int redX;
+    	int redY;
+    	int blueX;
+    	int blueY;
+    };
+    
+    int bfs(int rx, int ry, int bx,int by) {
+    	int ans = 0;
+    	queue<Balls> q;
+    	q.push({ rx,ry , bx,by });
+    	visited[rx][ry][bx][by] = true;
+    	while (!q.empty()) {
+    		int size = q.size();
+    		while (size--) {
+    			Balls cur = q.front();
+    			q.pop();
+    			if (board[cur.redX][cur.redY] == 'O' && board[cur.redX][cur.redY] != board[cur.blueX][cur.blueY]) { return ans; }
+    			for (int i = 0; i < 4; i++) {
+    				int nrx = cur.redX;
+    				int nry = cur.redY;
+    				int nbx = cur.blueX;
+    				int nby = cur.blueY;
+    
+    				while (board[nrx + dx[i]][nry + dy[i]] != '#' && board[nrx][nry] != 'O' ) {
+    					nrx += dx[i];
+    					nry += dy[i];
+    				}
+    				while (board[nbx + dx[i]][nby + dy[i]] != '#' &&  board[nbx][nby] != 'O') {
+    					nbx += dx[i];
+    					nby += dy[i];
+    				}
+    				if (nrx == nbx && nry == nby) {
+    					if (board[nbx][nby] == 'O') continue;
+    					if (i == 0) {
+    						//위
+    						if (cur.redX < cur.blueX) { nbx++; }
+    						else { nrx++; }
+    					}
+    					else if (i == 1) {
+    						//아래
+    						if (cur.redX < cur.blueX) { nrx--; }
+    						else { nbx--; }
+    					}
+    					else if (i == 2) {
+    						//왼
+    						if (cur.redY < cur.blueY) { nby++; }
+    						else { nry++; }
+    					}
+    					else if (i == 3) {
+    						//오
+    						if (cur.redY < cur.blueY) { nry--; }
+    						else { nby--; }
+    					}
+    				}
+    				if (!visited[nrx][nry][nbx][nby]) {
+    					q.push({ nrx, nry, nbx, nby });
+    					visited[nrx][nry][nbx][nby] = true;
+    				}
+    			}
+    		}
+    		if (ans == 10) return -1;
+    		ans++;
+    	}
+    
+    	return -1;
+    }
+    
+    int main() {
+    	cin >> N >> M;
+    	int rx, ry, bx, by;
+    	for (int i = 0; i < N; i++) {
+    		for (int j = 0; j < M; j++) {
+    			cin >> board[i][j];
+    			if (board[i][j] == 'R') { rx = i; ry = j; board[i][j] = '.';}
+    			else if (board[i][j] == 'B') { 
+    				bx = i; by = j; 
+    				board[i][j] = '.';
+    			}
+    		}
+    	}
+    
+    	cout << bfs(rx, ry, bx, by)<<"\n";
+    	
+    	return 0;
+    }
+    ```
+
+
+
 
 - 2084(essy)
+
+  최대 5번 이동한 거 중에 최대값을 찾는 문제
+
+  dfs를 이용했다.
+
+  예제는 정답 출력 잘함..
+
+  ```c++
+    #include <string>
+    #include <vector>
+    #include <iostream>
+    #include <algorithm>
+    #include <queue>
+    
+    using namespace std;
+    
+    int N;
+    int board[21][21];
+    
+    int result;
+    int dx[] = { -1,1,0,0 };
+    int dy[] = { 0,0,-1,1 };
+    
+    void change(int x,int y) {
+    	for (int i = 1; i < N; i++) {
+    		for (int j = 0; j < N; j++) {
+    			if (board[i + x][j + y] == board[i][j] && (board[i + x][j + y] != 0 && board[i][j] != 0)) {
+    				board[i + x][j+y] = board[i][j] * 2;
+    				board[i][j] = 0;
+    			}
+    			else if (board[i+x][j+y] == 0 && board[i][j] != 0) {
+    				board[i+x][j+y] = board[i][j];
+    				board[i][j] = 0;
+    			}
+    		}
+    	}
+    }
+    
+    void copyArray(int a[21][21], int b[21][21]) {
+    	for (int i = 0; i < N; i++) {
+    		for (int j = 0; j < N; j++) {
+    			a[i][j] = b[i][j];
+    		}
+    	}
+    }
+    
+    void dfs(int cnt) {
+    	int copyboard[21][21];
+    	if (cnt == 5) {
+    		int val = 0;
+    		for (int i = 0; i < N; i++) {
+    			for (int j = 0; j < N; j++) {
+    				if (val < board[i][j]) val = board[i][j];
+    			}
+    		}
+    		if (val > result) result = val;
+    		return;
+    	}
+    	for (int k = 0; k < 4; k++) {
+    		copyArray(copyboard, board);
+    		change(dx[k], dy[k]);
+    		dfs(cnt + 1);
+    		copyArray(board, copyboard);
+    	}
+    }
+    
+    
+    int main() {
+    	ios_base::sync_with_stdio(false);
+    	cin >> N;
+    	for (int i = 0; i < N; i++) {
+    		for (int j = 0; j < N; j++) {
+    			cin >> board[i][j];
+    		}
+    	}
+    	dfs(0);
+    	cout << result << "\\n";
+    	return 0;
+    }
+  ```
+
+  근데 막상 넣어서 돌리니깐 `틀렸습니다` 뜸.. 졸라 이해안돼...
+
+  위아래좌우에 따른 범위를 생각하고 해야하는 거 같아서 신경써서 했더니 또 틀림
+
+  ```c++
+    #include <string>
+    #include <vector>
+    #include <iostream>
+    #include <algorithm>
+    #include <queue>
+    
+    using namespace std;
+    
+    int N;
+    int board[21][21];
+    
+    int result;
+    int dx[] = { 0,0,-1,1 };
+    int dy[] = { -1,1,0,0 };
+    
+    void change(int type) {
+    
+    	switch (type) {
+    		//왼쪽
+    	case 0:
+    		for (int i = 0; i < N; i++) {
+    			for (int j = 1; j < N; j++) {
+    				if (board[i][j - 1] == board[i][j] && (board[i][j - 1] != 0 && board[i][j] != 0)) {
+    					board[i][j - 1] = board[i][j] * 2;
+    					board[i][j] = 0;
+    				}
+    				else if (board[i][j - 1] == 0 && board[i][j] != 0) {
+    					board[i][j - 1] = board[i][j];
+    					board[i][j] = 0;
+    				}
+    			}
+    		}
+    
+    		break;
+    		//오른쪽
+    	case 1:
+    		for (int i = 0; i < N; i++) {
+    			for (int j = N-2; j >=0; j--) {
+    				if (board[i][j+1] == board[i][j] && (board[i][j+1] != 0 && board[i][j] != 0)) {
+    					board[i][j+1] = board[i][j] * 2;
+    					board[i][j] = 0;
+    				}
+    				else if (board[i][j+1] == 0 && board[i][j] != 0) {
+    					board[i][j+1] = board[i][j];
+    					board[i][j] = 0;
+    				}
+    			}
+    		}
+    		break;
+    		//위
+    	case 2:
+    		for (int i = 1; i < N; i++) {
+    			for (int j = 0; j < N; j++) {
+    				if (board[i -1][j] == board[i][j] && (board[i-1][j] != 0 && board[i][j] != 0)) {
+    					board[i-1][j] = board[i][j] * 2;
+    					board[i][j] = 0;
+    				}
+    				else if (board[i-1][j] == 0 && board[i][j] != 0) {
+    					board[i-1][j] = board[i][j];
+    					board[i][j] = 0;
+    				}
+    			}
+    		}
+    		break;
+    		//아래
+    	case 3:
+    		for (int i = N-2; i >=0; i--) {
+    			for (int j = 0; j < N; j++) {
+    				if (board[i+1][j] == board[i][j] && (board[i+ 1][j] != 0 && board[i][j] != 0)) {
+    					board[i+1][j] = board[i][j] * 2;
+    					board[i][j] = 0;
+    				}
+    				else if (board[i+1][j] == 0 && board[i][j] != 0) {
+    					board[i+1][j] = board[i][j];
+    					board[i][j] = 0;
+    				}
+    			}
+    		}
+    		break;
+    	}
+    }
+  ```
 
 [12100번: 2048 (Easy)](https://www.acmicpc.net/problem/12100)
 
 - 정답 소스
+
+  내가 구현한 change 함수를 정답 소스에 있던거로 바꾸니깐 작동이 잘됨..여기서 실수를 한듯?
+
+  ```c++
+    void change(int type) {
+    	queue<int> q;
+    
+    	switch (type) {
+    		//왼쪽
+    	case 0:
+    		for (int i = 0; i < N; i++) {
+    			for (int j = 0; j < N; j++) {
+    				if (board[i][j]) {
+    					q.push(board[i][j]);
+    				}
+    				board[i][j] = 0;
+    			}
+    			int idx = 0;
+    			while (!q.empty()) {
+    				int data = q.front();
+    				q.pop();
+    				if (board[i][idx] == 0) {
+    					board[i][idx] = data;
+    				}
+    				else if (board[i][idx] == data) {
+    					board[i][idx] *= 2;
+    					idx++;
+    				}
+    				else {
+    					idx++;
+    					board[i][idx] = data;
+    				}
+    			}
+    		}
+    		break;
+    		//오른쪽
+    	case 1:
+    		for (int i = 0; i < N; i++) {
+    			for (int j = N - 1; j >= 0; j--) {
+    				if (board[i][j]) {
+    					q.push(board[i][j]);
+    				}
+    				board[i][j] = 0;
+    			}
+    			int idx = N - 1;
+    			while (!q.empty()) {
+    				int data = q.front();
+    				q.pop();
+    				if (board[i][idx] == 0) {
+    					board[i][idx] = data;
+    				}
+    				else if (board[i][idx] == data) {
+    					board[i][idx] *= 2;
+    					idx--;
+    				}
+    				else {
+    					idx--;
+    					board[i][idx] = data;
+    				}
+    			}
+    		}
+    		break;
+    		//위
+    	case 2:
+    		for (int i = 0; i < N; i++) {
+    			for (int j = 0; j < N; j++) {
+    				if (board[j][i]) {
+    					q.push(board[j][i]);
+    				}
+    				board[j][i] = 0;
+    			}
+    			int idx = 0;
+    			while (!q.empty()) {
+    				int data = q.front();
+    				q.pop();
+    				if (board[idx][i] == 0) {
+    					board[idx][i] = data;
+    				}
+    				else if (board[idx][i] == data) {
+    					board[idx][i] *= 2;
+    					idx++;
+    				}
+    				else {
+    					idx++;
+    					board[idx][i] = data;
+    				}
+    			}
+    		}
+    		break;
+    		//아래
+    	case 3:
+    		for (int i = 0; i < N; i++) {
+    			for (int j = N - 1; j >= 0; j--) {
+    				if (board[j][i]) {
+    					q.push(board[j][i]);
+    				}
+    				board[j][i] = 0;
+    			}
+    			int idx = N - 1;
+    			while (!q.empty()) {
+    				int data = q.front();
+    				q.pop();
+    				if (board[idx][i] == 0) {
+    					board[idx][i] = data;
+    				}
+    				else if (board[idx][i] == data) {
+    					board[idx][i] *= 2;
+    					idx--;
+    				}
+    				else {
+    					idx--;
+    					board[idx][i] = data;
+    				}
+    			}
+    		}
+    		break;
+    	}
+    }
+  ```
+
+**틀린 이유**
+
+내가 썼던 방법이 (삽입 정렬)에서 따서 써본건데 이 방법은 완전히 틀렸다.
+
+만약
+
+8 8 2 2 가 있는데 왼쪽으로 쏠린다? 16 4 0 0 가 되어야한다. 근데 저 코드로는 16 2 2 0 가 됨 왜냐면 0으로 만들고 그 전이 0이면 걍 data만 옮기게 했거든.. 그래서 틀린거다. queue로 값 다 뽑고 ㄷ정답소스처럼 해야지 알맞은 답이 나오는 듯 하다.
+
+- 뱀
+
+  다음과 같이 풀었는데 자꾸 예제2,3은 오류임
+
+  왜냐면 D로 방향 변환하고 10번가면 보드 범위 벗어나서 return 하기 때문임..
+
+  ```c++
+    #include <string>
+    #include <vector>
+    #include <iostream>
+    #include <algorithm>
+    #include <queue>
+    
+    using namespace std;
+    
+    int N, K;
+    int board[101][101];
+    bool snake[101][101];
+    int dx[] = { 0,1,0,-1 }; //처음 시작은 오른방향이래서 오,아래,왼,위 순
+    int dy[] = { 1, 0, -1,0 };
+    
+    int main() {
+    	int L;
+    	ios_base::sync_with_stdio(false);
+    	cin >> N >> K;
+    	pair<int, int> head;
+    	for (int i = 0; i < K; i++) {
+    		int x, y;
+    		cin >> x >> y;
+    		board[x][y] = 2;
+    	}
+    	head.first = 1;
+    	head.second = 1;
+    	snake[head.first][head.second] = true;
+    	queue<pair<int, int> > tail;
+    	tail.push({ 1,1 });
+    	cin >> L;
+    	int index = 0;
+    	int cnt = 0;
+    	for (int i = 0; i < L; i++) {
+    		int x;
+    		char c;
+    		cin >> x >> c;
+    		while (x--) {
+    			cnt++;
+    			int nx = head.first + dx[index];
+    			int ny = head.second + dy[index];
+    			cout << nx << " " << ny << "\\n";
+    			if (nx < 1 || ny < 1 || nx >N || ny >N || snake[nx][ny]) {
+    				cout << cnt << "\\n";
+    				return 0;
+    			}
+    			snake[nx][ny] = true;
+    			if (board[nx][ny] == 2) {
+    				board[nx][ny] = 0;
+    			}
+    			else {
+    				int x = tail.front().first;
+    				int y = tail.front().second;
+    				snake[x][y] = false;
+    				tail.pop();
+    			}
+    			head.first = nx;
+    			head.second = ny;
+    			tail.push({ nx,ny });
+    		}
+    		if (c == 'D') {
+    			index++;
+    			if (index ==4) index = 0;
+    		}
+    		else if (c == 'L') {
+    			index--;
+    			if (index == -1) index = 3;
+    		}
+    	}
+    	return 0;
+    }
+  ```
+
+[3190번: 뱀](https://www.acmicpc.net/problem/3190)
+
+- 정답 소스
+
+  유투브 풀이보고 맞음ㅋㅋㅋㅋㅋ 아 진짜 그렇게 문제 자세히보자고 했는데 또 이상하게 이해해서 틀림 ..ㅅㅂ.ㅋㅋㅋ..
+
+  13초 지나고 변환 10초 지나고 변환이 아니라 시간 초가 == 해당 x랑 같을 때 변환하는 거였음 읽을 때 아 이거 놓치지 말아야지 했는데 코드 짜다보니 놓쳤음..
+
+  이렇게 품!
+
+  ```c++
+    #include <string>
+    #include <vector>
+    #include <iostream>
+    #include <algorithm>
+    #include <queue>
+    
+    using namespace std;
+    
+    int N, K;
+    int board[101][101];
+    bool snake[101][101];
+    int dx[] = { 0,1,0,-1 };
+    int dy[] = { 1, 0, -1,0 };
+    
+    int main() {
+    	int L;
+    	ios_base::sync_with_stdio(false);
+    	cin >> N >> K;
+    	pair<int, int> head;
+    	for (int i = 0; i < K; i++) {
+    		int x, y;
+    		cin >> x >> y;
+    		board[x][y] = 2;
+    	}
+    	head.first = 1;
+    	head.second = 1;
+    	snake[head.first][head.second] = true;
+    	queue<pair<int, int> > tail;
+    	vector<pair<int, char> > cmd;
+    	tail.push({ 1,1 });
+    	cin >> L;
+    	int index = 0;
+    	int cnt = 0;
+    	int vectorInx = 0;
+    	for (int i = 0; i < L; i++) {
+    		int x;
+    		char c;
+    		cin >> x >> c;
+    		cmd.push_back({ x,c });
+    	}
+    
+    	while (cnt <= 10100) {
+    		cnt++;
+    		int nx = head.first + dx[index];
+    		int ny = head.second + dy[index];
+    		if (nx < 1 || ny < 1 || nx >N || ny >N || snake[nx][ny]) {
+    			cout << cnt << "\\n";
+    			return 0;
+    		}
+    		snake[nx][ny] = true;
+    		if (board[nx][ny] == 2) {
+    			board[nx][ny] = 0;
+    		}
+    		else {
+    			int x = tail.front().first;
+    			int y = tail.front().second;
+    			snake[x][y] = false;
+    			tail.pop();
+    		}
+    		head.first = nx;
+    		head.second = ny;
+    		tail.push({ nx,ny });
+    		if (vectorInx < cmd.size() && cnt == cmd[vectorInx].first) {
+    			if (cmd[vectorInx].second == 'D') {
+    				index++;
+    				if (index == 4) index = 0;
+    			}
+    			else if (cmd[vectorInx].second == 'L') {
+    				index--;
+    				if (index == -1) index = 3;
+    			}
+    			vectorInx++;
+    		}
+    	}
+    	return 0;
+    }
+  ```
+
+
+
