--- a/문제들/삼성 역테 문제들.md
+++ b/문제들/삼성 역테 문제들.md
@@ -727,3 +727,52 @@
 
 
 
+- 시험감독
+
+  예제 다 맞음 근데 틀렸다고 뜸
+
+  ```cpp
+  #include <string>
+  #include <vector>
+  #include <iostream>
+  #include <algorithm>
+  #include <queue>
+  
+  using namespace std;
+  
+  int A[1000001];
+  int d[1000001];
+  int N;
+  
+  int main() {
+  	int B, C;
+  	ios_base::sync_with_stdio(false);
+  	cin >> N;
+  	for (int i = 1; i <= N; i++) {
+  		cin >> A[i];
+  		d[i] = 1;
+  	}
+  	cin >> B >> C;
+  	for (int i = 1; i <= N; i++) {
+  		A[i] = A[i] - (d[i] * B);
+  		if (A[i] > 0) {
+  			if (A[i] % C == 0) {
+  				d[i] += A[i] / C;
+  			}
+  			else d[i] += A[i] / C + 1;
+  		}
+  	}
+  	int total = 0;
+  	for (int i = 1; i <= N; i++) {
+  		total += d[i];
+  	}
+  	cout << total << "\\n";
+  	return 0;
+  }
+  ```
+
+[13458번: 시험 감독](https://www.acmicpc.net/problem/13458)
+
+- 정답 소스
+
+  내가 푼거랑 같은데 틀렸다고 떠서 long long d[i]으로 고쳤는데도 틀렸음  그래서 생각하다 아 결과가 그렇구나! 해서 total을 long long 형으로 고쳤더니 맞음ㅋㅋ 메모리는 전에 정답보다 더 잡아먹는데 시간은 같다.
